Portfolio Section - Fixes column spacing.. more even and center

--- a/startbootstrap-freelancer-gh-pages/css/all.css
+++ b/startbootstrap-freelancer-gh-pages/css/all.css
@@ -11,9 +11,7 @@
 	text-align: center;
 	height: 250px;
 }
-.portfolio-item .portfolio-link .img-responsive {
-	padding-right:15%;
-}
+
 .portfolio-item.text {
 	text-align: left;
 	display:table;
@@ -21,4 +19,20 @@
 .portfolio-item.text p{
 	display:table-cell;
 	vertical-align:middle;
+}
+@media (max-width:991px){
+	.col-sm-4 {
+		width:50%;
+	}
+	.col-sm-offset-2 {
+		margin-left:0;
+	}
+}
+@media (max-width:768px){
+	.col-sm-4 {
+		width:auto;
+	}
+	.portfolio-item.text {
+		display:none;
+	}
 }
